--- a/style.css
+++ b/style.css
@@ -36,3 +36,14 @@ body {
 .img-header {
     height: 100px;
 }
+
+#burguer {
+    background-color: rgb(71, 71, 255);
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    }
+    #menu {
+    display: none;
+    }
